# Dash_InformeMensual

./: .aiignore  .gitignore  Constants.py  Dockerfile  Elasticidad_Methods.py  Readme.md  app.py  docker-compose.yml  examine_geojson.py  load_at_docker_stage.py  main.py  methods.py  ptrab.html  pyproject.toml  query_test.py  requirements.txt  terminal_commands.md
.junie/: guidelines.md
Pages/: precios_layout.py
assets/: dropdown.css  logo.css  navbar.css
auxiliar/: elasticidad_demanda.py
components/: __init__.py  loading.py  logo.py
data_conversion/: README.md  __init__.py  convert_all_to_parquet.py  csv_to_parquet_info_mercado.py  csv_to_parquet_vmensual.py
pages/: consumo_por_regiones.py  elasticidad_demanda.py  estructura_precios.py  informe_en_linea.py  informe_mensual.py  informe_online.py  mapa_consumo_municipal.py  mercado_eds.py  parque_automotor.py  precios_referencia.py
prototyping_test/: README_vmensual_update.md  ZDF_test2.py  blocking_test.py  distinct_counts_producto.py  elasticidad_demanda_test.py  elasticidad_demanda_test2.py  lista_precios_test.py  mail_scrappnig_test_1.py  new_vmensual_query.py  online_report_test.py  query_vmensual_fresh_newf.py  quick_test.py  regular_queries.py  update_vmensual.py  validacion1.py  vmensual_fresh.py  vmensual_porting.py
services/: conclusiones_informe.py  elasticidad_demanda_data.py  elasticidad_demanda_service.py  estructura_precios_data.py  estructura_precios_services.py  general.py  informe_mensual_data.py  informe_mensual_service.py  informe_online_data.py  informe_online_service.py  init_service.py  (+4 more)
(+26 files in other folders)
