[tool.poetry]
name = "dash-informemensual"
version = "0.1.0"
description = ""
authors = ["raulest50 <raulest50@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
dash = "2.18.1"
dash_bootstrap_components = "1.6.0"
matplotlib = "3.9.2"
numpy = "2.1.2"
pandas = "2.2.3"
plotly = "5.24.1"
python-dotenv = "1.0.1"
pytz = "2024.2"
requests = "2.32.3"  # Corrected capitalization
seaborn = "0.13.2"
sodapy = "2.2.0"
statsmodels = "0.14.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
