[tool.poetry]
name = "dash-informemensual"
version = "0.1.0"
description = ""
authors = ["raulest50 <raulest50@gmail.com>"]
readme = "README.md"
package-mode = false  # Added this line

[tool.poetry.dependencies]
setuptools = "^75.2.0"
python = "^3.12"
beautifulsoup4 = "4.12.3"
dash = "2.18.1"
dash_bootstrap_components = "1.6.0"
matplotlib = "3.9.2"
numpy = "2.1.2"
pandas = "2.2.3"
plotly = "5.24.1"
python-dotenv = "1.0.1"
pytz = "2024.2"
requests = "2.32.3"
sodapy = "2.2.0"
statsmodels = "0.14.4"
openpyxl = "^3.1.5"
psutil = "^7.0.0"
pyarrow = "^20.0.0"

[tool.poetry.group.dev.dependencies]
deptry = "^0.21.1"
memory-profiler = "^0.61.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
